get and delete submit merge
