# prp-api/api/swagger/swagger.yaml
@@ -63,6 +63,25 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: "delete survey of patient"
+      operationId: deleteSurvey
+      parameters:
+        - name: id
+          in: path
+          description: "Survey instance ID"
+          required: true
+          type: "integer"
+      responses:
+        "204":
+          description: SUCCESSFUL DELETE
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/DeleteSurveyResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"        
 
   /survey:
     x-swagger-router-controller: submit-survey
@@ -86,7 +105,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-          
+    
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -104,6 +123,12 @@ definitions:
       message:
         type: string
   PostSurveyResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  DeleteSurveyResponse:
     required:
       - message
     properties:
